# streamlit-rate-pricing-simulator

./: .flake8  .gitignore  .python-version  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  testing-requirements.txt
.github/workflows/: ci.yaml  pull-request.yaml
app/: app.py  point.py  ui.py
notebook/: test.ipynb
notebook/exp4ray/: exp_with_ PPO.ipynb  exp_with_Bandit.ipynb
notebook/offline_rl/: off_policy.ipynb  saving_experiences.py  small.json
scource/: spaces_gym.py
scource/room_pricing/bandits/: contextual_bandits.py  environment.py  utils.py
scource/room_pricing/bandits/bayesian_model/: environment.py  environment_gym.py  spaces.py  thompson_sampler.py  thompson_sampler_gym.py
source/: mab.py  plots.py  simulator_envs_gym.py  spaces_gym.py  utils.py
source/app/: app.py  app_v2.py  settings.py
source/app/pages/: Appendix.py  Scenario1.py  Scenario2.py  Scenario3.py  Scenario4.py  Scenario5.py  Scenario6.py  ScenarioBase.py
source/environments/: simulator_env_1.py  simulator_env_2.py  simulator_env_3.py  simulator_envs_gym.py  spaces_gym.py
source/rate_pricing_simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
source/room_pricing/bandits/: agent.py
source/room_pricing/bandits/bayesian_model/: environment_gym.py  thompson_sampler_gym.py
source/train/: train.py  train_utils.py
