[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rate-pricing-simulator"
dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
where = ["source"]
include = ["app*", "room_pricing*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
testing = [
  "pytest"
]
